# vector-db-research

./: .gitignore  README.md  matryoshka-test.ipynb  pyproject.toml
configs/: config.py
core/: chunker.py  data_loader.py  embedder.py  milvus_index.py  retrieval.py
matryoshka/: matryoshka-test.ipynb
notebooks/matryoshka/: matryoshka-test.ipynb
notebooks/quantisation/: milvus-test.ipynb
notebooks/scripts/: ingest.ipynb
quantisation/: milvus-standalone.ipynb  milvus-test.ipynb
scripts/: ingest.py  query.py
utils/: logger.py  vectordb.py
