[project]
name = "vector-db-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pymilvus>=2.6.2",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
]
